--- a/Controle-tarefas-react/frontend/public/index.html
+++ b/Controle-tarefas-react/frontend/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>  
+<html>  
 
-<head>  
-    <meta charset='utf-8'>  
-    <meta name='viewport' content='width=device-width, initial-scale=1'>  
-    <title>Controle de tarefas</title>  
-    <link rel='stylesheet' href='app.css'>  
-</head>  
+<head>  
+    <meta charset='utf-8'>  
+    <meta name='viewport' content='width=device-width, initial-scale=1'>  
+    <title>Tasks Control</title>  
+    <link rel='stylesheet' href='app.css'>  
+</head>  
 
-<body>  
-    <div id="app" class='container'></div>  
-    <script src='app.js'></script>  
+<body>  
+    <div id="app" class='container'></div>  
+    <script src='app.js'></script>  
 </body>
 
 </html>
