--- a/Controle-tarefas-react/frontend/public/index.html
+++ b/Controle-tarefas-react/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>  
     <meta charset='utf-8'>  
     <meta name='viewport' content='width=device-width, initial-scale=1'>  
-    <title>Tasks Control</title>  
+    <title>Controle de tarefas</title>  
     <link rel='stylesheet' href='app.css'>  
 </head>  
 
